-- Fixed the alignment issue on the quick action page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -852,6 +852,14 @@
     height: 100%;
 }
 
+.snippet-img>div>div>div {
+    padding: 16% 0% !important;
+}
+
+.snippet-img>div>div>div>div {
+    padding: 2% !important;
+}
+
 .count-0.image-resize,
 .count-1.remove-background,
 .count-2.convert-png {
